--- a/index.html
+++ b/index.html
@@ -3,62 +3,67 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Homework-1</title>
+        <title>StudioPage</title>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="./css/styles.css">
     </head>
     <body>
-    <header>
+
+    <header class="page-header">
         <nav>
-            <a href="">webstudio</a>
+            <a href="" class="logo link"><span class="logoblue">web</span>studio</a>
             
-            <ul>
-                <li><a href="">Студія</a></li>
-                <li><a href="">Портфоліо</a></li>
-                <li><a href="">Контакти</a></li>
+            <ul class="site-nav">
+                <li><a href="" class="link current">Студія</a></li>
+                <li><a href="./portfolio.html" class="link">Портфоліо</a></li>
+                <li><a href="" class="link">Контакти</a></li>
             </ul>
         </nav>
 
         <ul>
-            <li><a href="">info@devstudio.com</a></li>
-            <li><a href="">+38 096 111 11 11</a></li>
+            <li><a href="" class="link connect-contact">info@devstudio.com</a></li>
+            <li><a href="" class="link connect-contact">+38 096 111 11 11</a></li>
         </ul>
     </header>
 
     <main>
 
+<!-- Герой -->
         <div>
-            <section>
-                <h1>Ефективні рішення для вашого бізнесу</h1>
-                <button type="button">Замовити послугу</button>
+            <section class="hero">
+                <h1 class="hero-title">Ефективні рішення для вашого бізнесу</h1>
+                <a href="" class="button primary link">Замовити послугу</a>
             </section>
         </div>
 
-        <section>
-            <h2>Переваги</h2>
-
-            <ul>
+<!-- Преимущества -->
+        <section class="section">
+            <ul class="features">
                 <li>
-                    <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
+                    <h3 class="title">УВАГА ДО ДЕТАЛЕЙ</h3>
                     <p>
                         Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.
                     </p>
                 </li>
 
                 <li>
-                    <h3>ПУНКТУАЛЬНІСТЬ</h3>
+                    <h3 class="title">ПУНКТУАЛЬНІСТЬ</h3>
                     <p>
                         Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
                     </p>
                 </li>
 
                 <li>
-                    <h3>ПЛАНУВАННЯ</h3>
+                    <h3 class="title">ПЛАНУВАННЯ</h3>
                     <p>
                         Так само консультація з широким активом значною мірою зумовлює.
                     </p>
                 </li>
 
                 <li>
-                    <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+                    <h3 class="title">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
                     <p>
                         Значимість цих проблем настільки очевидна, що реалізація планових завдань.
                     </p>
@@ -66,8 +71,9 @@
             </ul>
         </section>
 
-        <section>
-            <h2>Чим ми займаємося</h2>
+ <!-- Чем занимаемся -->
+        <section class="section">
+            <h2 class="section-title">Чим ми займаємося</h2>
             <ul>
                 <li>
                     <img src="./images/image1.png" alt="людина працює у комп'ютері" width="370"/>
@@ -83,47 +89,50 @@
             </ul>
         </section>
 
-        <section>
-            <h2>Наша команда</h2>
-            <ul>
+        <!-- Команда -->
+        <section class="section">
+            <h2 class="section-title">Наша команда</h2>
+            <ul class="team">
                 <li>
                     <img src="./images/person1.jpg" alt="Ігор Дем'яненко продукт дизайнер" width="270"/>
-                    <h3>Ігор Дем'яненко</h3>
+                    <h3 class="title">Ігор Дем'яненко</h3>
                     <p>Product Designer</p>
                 </li>
 
                 <li>
                     <img src="./images/person2.jpg" alt="Ольга Рєпіна фронт енд дивелопер" width="270"/>
-                    <h3>Ольга Рєпіна</h3>
+                    <h3 class="title">Ольга Рєпіна</h3>
                     <p>Frontend Developer</p>
                 </li>
 
                 <li>
                     <img src="./images/person3.jpg" alt="Микола Тарасов маркейтинг" width="270"/>
-                    <h3>Микола Тарасов</h3>
+                    <h3 class="title">Микола Тарасов</h3>
                     <p>Marketing</p>
                 </li>
 
                 <li>
                     <img src="./images/person4.jpg" alt="Михайло Єрмаков дизайнер" width="270"/>
-                    <h3>Михайло Єрмаков</h3>
+                    <h3 class="title">Михайло Єрмаков</h3>
                     <p>UI Designer</p>
                 </li>
             </ul>
         </section>
     </main>
 
+ <!-- Футер -->
     <footer>
+
         <nav>
-            <a href="">webstudio</a>
+        <a href="" class="logo link"><span class="logoblue">web</span>studio</a>
         </nav>
 
         <address>
             <p>м. Київ, пр-т Лесі Українки, 26</p>
-            <a href="">info@devstudio.com</a>
-            <a href="">+38 096 111 11 11</a>
+            <a href="" class="link">info@devstudio.com</a>
+            <a href="" class="link">+38 096 111 11 11</a>
         </address>
     </footer>
-
-
+</body>
+</html>
    
